force-app/main/default/objects/Contact/fields/Address_type__c.field-meta.xml
<CustomField>
    <fullName>Address_type__c</fullName>
    <label>Address type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bill to</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Ship to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>