force-app/main/default/objects/Contact/fields/Allow_bulk_email__c.field-meta.xml
<CustomField>
    <fullName>Allow_bulk_email__c</fullName>
    <label>Allow bulk email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>