force-app/main/default/objects/Contact/fields/Allow_marketing__c.field-meta.xml
<CustomField>
    <fullName>Allow_marketing__c</fullName>
    <label>zzAllow marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>