force-app/main/default/objects/Contact/fields/Allow_post__c.field-meta.xml
<CustomField>
    <fullName>Allow_post__c</fullName>
    <label>Allow post</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>