force-app/main/default/objects/Contact/fields/B2B_brokerage__c.field-meta.xml
<CustomField>
    <fullName>B2B_brokerage__c</fullName>
    <formula>ISPICKVAL(GDPR_consent__c, &quot;True&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B brokerage (check me)</label>
    <type>Checkbox</type>
</CustomField>