force-app/main/default/objects/Contact/fields/B2B_charter__c.field-meta.xml
<CustomField>
    <fullName>B2B_charter__c</fullName>
    <formula>ISPICKVAL(GDPR_consent__c, &quot;true&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B2B charter (Check me)</label>
    <type>Checkbox</type>
</CustomField>