force-app/main/default/objects/Contact/fields/BirthYear__c.field-meta.xml
<CustomField>
    <fullName>BirthYear__c</fullName>
    <label>Birth Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>