force-app/main/default/objects/Contact/fields/Burgess_Blue_Ocean_donations__c.field-meta.xml
<CustomField>
    <fullName>Burgess_Blue_Ocean_donations__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Burgess Blue Ocean donations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>