force-app/main/default/objects/Contact/fields/Burgess_Blue_Oceans_last_updated__c.field-meta.xml
<CustomField>
    <fullName>Burgess_Blue_Oceans_last_updated__c</fullName>
    <label>Burgess Blue Oceans last updated</label>
    <type>Date</type>
</CustomField>