force-app/main/default/objects/Contact/fields/BusinessPhone1__c.field-meta.xml
<CustomField>
    <fullName>BusinessPhone1__c</fullName>
    <label>Business Phone 1</label>
    <type>Phone</type>
</CustomField>