force-app/main/default/objects/Contact/fields/BusinessPhone2__c.field-meta.xml
<CustomField>
    <fullName>BusinessPhone2__c</fullName>
    <label>Business Phone 2</label>
    <type>Phone</type>
</CustomField>