force-app/main/default/objects/Contact/fields/Call_for_Reference__c.field-meta.xml
<CustomField>
    <fullName>Call_for_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call for Reference</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>