force-app/main/default/objects/Contact/fields/Contact_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Contact_Qualification__c</fullName>
    <label>Contact Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Client</fullName>
            </value>
            <value>
                <fullName>Industry Contact</fullName>
            </value>
            <value>
                <fullName>Qualified Contact</fullName>
            </value>
            <value>
                <fullName>Unqualified Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>