force-app/main/default/objects/Contact/fields/Data_Population_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Population_Score__c</fullName>
    <formula>IF
(ISBLANK(TEXT(  Preferred_contact_method__c )) = TRUE, 0, 20)
+
IF
(ISBLANK(  Email ) = TRUE, 0, 20)
+
IF
(ISBLANK(TEXT(   Nationality__c )) = TRUE, 0, 20)
+
IF
(ISBLANK(   Phone ) = TRUE, 0, 20)
+
IF
(ISBLANK(     MailingCountry ) = TRUE, 0, 20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Population Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>