force-app/main/default/objects/Contact/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>50</length>
    <type>Text</type>
</CustomField>