force-app/main/default/objects/Contact/fields/Enquiry_method__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_method__c</fullName>
    <label>Enquiry method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Enquiry_method</valueSetName>
    </valueSet>
</CustomField>