force-app/main/default/objects/Contact/fields/Envelope_name__c.field-meta.xml
<CustomField>
    <fullName>Envelope_name__c</fullName>
    <label>Envelope Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>