force-app/main/default/objects/Contact/fields/Forbes_ID__c.field-meta.xml
<CustomField>
    <fullName>Forbes_ID__c</fullName>
    <label>Forbes ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>