force-app/main/default/objects/Contact/fields/GDPR_consent__c.field-meta.xml
<CustomField>
    <fullName>GDPR_consent__c</fullName>
    <label>GDPR consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Withdrawn_Null</valueSetName>
    </valueSet>
</CustomField>