force-app/main/default/objects/Contact/fields/GDPR_consent_type__c.field-meta.xml
<CustomField>
    <fullName>GDPR_consent_type__c</fullName>
    <label>zzGDPR consent type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>