force-app/main/default/objects/Contact/fields/GDPR_consent_updated__c.field-meta.xml
<CustomField>
    <fullName>GDPR_consent_updated__c</fullName>
    <label>GDPR consent updated</label>
    <type>Date</type>
</CustomField>