force-app/main/default/objects/Contact/fields/GDPR_consent_via_third_party__c.field-meta.xml
<CustomField>
    <fullName>GDPR_consent_via_third_party__c</fullName>
    <label>GDPR consent via third party</label>
    <length>80</length>
    <type>Text</type>
</CustomField>