force-app/main/default/objects/Contact/fields/GDPRConsentType__c.field-meta.xml
<CustomField>
    <fullName>GDPRConsentType__c</fullName>
    <label>GDPR Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In person</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Third party</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Assumed pre-GDPR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>