force-app/main/default/objects/Contact/fields/Geo_region__c.field-meta.xml
<CustomField>
    <fullName>Geo_region__c</fullName>
    <label>Geo region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>