force-app/main/default/objects/Contact/fields/Industry_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Industry_Picklist__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
                <label>Construction &amp; Engineering</label>
            </value>
            <value>
                <fullName>Diversified</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Fashion &amp; Retail</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Investments</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Gambling &amp; Casinos</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
                <label>Media &amp; Entertainment</label>
            </value>
            <value>
                <fullName>Metals &amp; Mining</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
                <label>Telecom</label>
            </value>
            <value>
                <fullName>Yachting</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
                <isActive>false</isActive>
                <label>Agriculture</label>
            </value>
            <value>
                <fullName>Apparel</fullName>
                <isActive>false</isActive>
                <label>Apparel</label>
            </value>
            <value>
                <fullName>Banking</fullName>
                <isActive>false</isActive>
                <label>Banking</label>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
                <isActive>false</isActive>
                <label>Biotechnology</label>
            </value>
            <value>
                <fullName>Chemicals</fullName>
                <isActive>false</isActive>
                <label>Chemicals</label>
            </value>
            <value>
                <fullName>Communications</fullName>
                <isActive>false</isActive>
                <label>Communications</label>
            </value>
            <value>
                <fullName>Consulting</fullName>
                <isActive>false</isActive>
                <label>Consulting</label>
            </value>
            <value>
                <fullName>Education</fullName>
                <isActive>false</isActive>
                <label>Education</label>
            </value>
            <value>
                <fullName>Electronics</fullName>
                <isActive>false</isActive>
                <label>Electronics</label>
            </value>
            <value>
                <fullName>Engineering</fullName>
                <isActive>false</isActive>
                <label>Engineering</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>