force-app/main/default/objects/Contact/fields/IsOwnerOfRecord__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerOfRecord__c</fullName>
    <formula>OwnerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOwnerOfRecord</label>
    <type>Checkbox</type>
</CustomField>