force-app/main/default/objects/Contact/fields/Job_title__c.field-meta.xml
<CustomField>
    <fullName>Job_title__c</fullName>
    <label>Job title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>