force-app/main/default/objects/Contact/fields/Last_campaign_date__c.field-meta.xml
<CustomField>
    <fullName>Last_campaign_date__c</fullName>
    <label>Last campaign date</label>
    <type>Date</type>
</CustomField>