force-app/main/default/objects/Contact/fields/LKW_Amount__c.field-meta.xml
<CustomField>
    <fullName>LKW_Amount__c</fullName>
    <label>LKW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>