force-app/main/default/objects/Contact/fields/LKW_Base__c.field-meta.xml
<CustomField>
    <fullName>LKW_Base__c</fullName>
    <formula>IF( LKW_Jump_Formula__c&lt;1,&quot;GBP 0&quot;, &quot;GBP &quot; &amp;
IF(
  ISBLANK(LKW_Jump_Formula__c), &quot;&quot;,
  IF(
    LEN(TEXT(LKW_Jump_Formula__c)) &lt;= 9,
    /* A,BBB,CCC */
    LEFT(TEXT(LKW_Jump_Formula__c), LEN(TEXT(LKW_Jump_Formula__c))-6) &amp; &quot;,&quot; &amp;
    MID(TEXT(LKW_Jump_Formula__c),  LEN(TEXT(LKW_Jump_Formula__c))-5, 3) &amp; &quot;,&quot; &amp;
    RIGHT(TEXT(LKW_Jump_Formula__c), 3),
    /* A,BBB,CCC,DDD */
    LEFT(TEXT(LKW_Jump_Formula__c), LEN(TEXT(LKW_Jump_Formula__c))-9) &amp; &quot;,&quot; &amp;
    MID(TEXT(LKW_Jump_Formula__c),  LEN(TEXT(LKW_Jump_Formula__c))-8, 3) &amp; &quot;,&quot; &amp;
    MID(TEXT(LKW_Jump_Formula__c),  LEN(TEXT(LKW_Jump_Formula__c))-5, 3) &amp; &quot;,&quot; &amp;
    RIGHT(TEXT(LKW_Jump_Formula__c), 3)
  )
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Base = GBP</inlineHelpText>
    <label>LKW Base</label>
    <type>Text</type>
</CustomField>