force-app/main/default/objects/Contact/fields/LKW_currency__c.field-meta.xml
<CustomField>
    <fullName>LKW_currency__c</fullName>
    <label>LKW currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>