force-app/main/default/objects/Contact/fields/LKW_Jump_Formula__c.field-meta.xml
<CustomField>
    <fullName>LKW_Jump_Formula__c</fullName>
    <formula>CASE(
LKW_currency__c,
&quot;GBP&quot;, LKW_Amount__c,
&quot;USD&quot;, LKW_Amount__c * $CustomMetadata.Currency_rate__mdt.USD_GBP.Conversion_rate__c,
&quot;EUR&quot;, LKW_Amount__c * $CustomMetadata.Currency_rate__mdt.EUR_GBP.Conversion_rate__c,
&quot;AUD&quot;, LKW_Amount__c * $CustomMetadata.Currency_rate__mdt.AUD_GBP.Conversion_rate__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LKW Jump Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>