force-app/main/default/objects/Contact/fields/LKW_source__c.field-meta.xml
<CustomField>
    <fullName>LKW_source__c</fullName>
    <label>LKW source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arabian Business</fullName>
            </value>
            <value>
                <fullName>Australian Financial Review</fullName>
            </value>
            <value>
                <fullName>Bilanz</fullName>
            </value>
            <value>
                <fullName>Bloomberg</fullName>
            </value>
            <value>
                <fullName>Business Insider</fullName>
            </value>
            <value>
                <fullName>Business Review Weekly</fullName>
            </value>
            <value>
                <fullName>Challenges</fullName>
            </value>
            <value>
                <fullName>Forbes</fullName>
            </value>
            <value>
                <fullName>Hurun Report</fullName>
            </value>
            <value>
                <fullName>Times Rich List</fullName>
            </value>
            <value>
                <fullName>Wealth X</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
                <isActive>false</isActive>
                <label>Option</label>
            </value>
            <value>
                <fullName>Set</fullName>
                <isActive>false</isActive>
                <label>Set</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>