force-app/main/default/objects/Contact/fields/LKW_updated__c.field-meta.xml
<CustomField>
    <fullName>LKW_updated__c</fullName>
    <label>LKW updated</label>
    <type>DateTime</type>
</CustomField>