force-app/main/default/objects/Contact/fields/Main_point_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Main_point_of_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main point of contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Main point of contact)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>