force-app/main/default/objects/Contact/fields/Mobile_phone_1__c.field-meta.xml
<CustomField>
    <fullName>Mobile_phone_1__c</fullName>
    <label>Mobile phone 1</label>
    <type>Phone</type>
</CustomField>