force-app/main/default/objects/Contact/fields/MobilePhone2__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone2__c</fullName>
    <label>Mobile Phone 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>