force-app/main/default/objects/Contact/fields/NDA_Details__c.field-meta.xml
<CustomField>
    <fullName>NDA_Details__c</fullName>
    <label>NDA Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>