force-app/main/default/objects/Contact/fields/NDA_in_place__c.field-meta.xml
<CustomField>
    <fullName>NDA_in_place__c</fullName>
    <label>NDA in place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>