force-app/main/default/objects/Contact/fields/NDA_URL__c.field-meta.xml
<CustomField>
    <fullName>NDA_URL__c</fullName>
    <label>NDA URL</label>
    <type>Url</type>
</CustomField>