force-app/main/default/objects/Contact/fields/Original_source__c.field-meta.xml
<CustomField>
    <fullName>Original_source__c</fullName>
    <label>Original source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3rd party client</fullName>
            </value>
            <value>
                <fullName>Adertising</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Boat Show</fullName>
            </value>
            <value>
                <fullName>Bought List</fullName>
            </value>
            <value>
                <fullName>Broker Initiative</fullName>
            </value>
            <value>
                <fullName>Client Initiative</fullName>
            </value>
            <value>
                <fullName>Data Mining</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>Printed Mailing</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Repeat Enquirer</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>