force-app/main/default/objects/Contact/fields/Originatinglead__c.field-meta.xml
<CustomField>
    <fullName>Originatinglead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>