force-app/main/default/objects/Contact/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POC</label>
    <type>Checkbox</type>
</CustomField>