force-app/main/default/objects/Contact/fields/Preferred_contact_method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_contact_method__c</fullName>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>SMS/WhatsApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>