force-app/main/default/objects/Contact/fields/Preferred_language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_language__c</fullName>
    <label>Preferred language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Croatian</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>English (US)</fullName>
                <isActive>false</isActive>
                <label>English (US)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>