force-app/main/default/objects/Contact/fields/Relationship_status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_status__c</fullName>
    <label>Relationship status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>