force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Contact_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Contact_Type_Roles</valueSetName>
    </valueSet>
</CustomField>